<resources>
    <string name="app_name">Travel Compañero</string>
    <string name="select_destination_lang_label">Select Destination Country</string>
    <string name="select_native_lang_label">Select Native Country</string>
    <string name="select_foreign_lang_label">Select Destination Country</string>
    <string name="translator">Voice / Text Translator</string>
    <string name="image_translator">Image Translator</string>
    <string name="destination">Destination - </string>
    <string name="text_input_native">Text Input (Native)</string>
    <string name="text_input_foreign">Text Input (Foreign)</string>
    <string name="audio_input_native">Audio Input (Native)</string>
    <string name="audio_input_foreign">Audio Input (Foreign)</string>
    <string name="voice_text_translator">Voice / Text Translator</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="dialog_edit_text_hint">Please Enter Text to get its Translation</string>
    <string name="keyboard_dialog_header">Input Text</string>
    <string name="audio_input_dialog_header">Audio Input</string>
    <string name="audio_dialog_message">Touch Mic and Speak</string>
    <string name="recognize">Recognize()</string>

    <string name="listening">Listening..</string>
    <string name="processing">Processing..</string>
    <string name="try_again">Try Again</string>
    <string name="recognition_results">Recognition Results:</string>
    <string name="translation_results">Translation Results</string>

    <string name="permissions_audio_storage_rationale">Audio and Storage Permission are required to Record your Voice and get Translation Results.</string>
    <string name="permissions_audio_storage_granted">Audio and Storage Permissions Granted.</string>
    <string name="permissions_audio_storage_not_granted">Audio and Storage Permissions NOT Granted.</string>
    <string name="loading_message">Loading Message ...</string>
    <string name="translate_image_btn_text">Upload Image</string>
    <string name="image_translation">Image Translation</string>
    <string name="uploaded_picture_preview">Uploaded Picture Preview</string>
    <string name="image_translation_results">Image Translation Results will appear here.</string>

    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message_img">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="getting_translations_message">Getting Translations.. Please Wait!</string>

</resources>
