<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/tv_audio_dialog_header"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/audio_input_dialog_header" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/PrimaryLight"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_audio_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:text="@string/audio_dialog_message" />

        <ImageButton
            android:id="@+id/btn_audio_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_mic_black_48dp"
            android:background="@color/transparent"/>

        <Button
            android:id="@+id/btn_audio_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>